@@ -1127,7 +1127,7 @@ void Corpse::LootItem(Client* client, const EQApplicationPacket* app)
 		buf[87] = '\0';
         parse->EventPlayer(EVENT_LOOT, client, buf, 0);
 
-		if (client && !client->GetGM() && !client->IsDiscovered(inst->GetItem()->ID))
+		if ((RuleB(Character, EnableDiscoveredItems)) && client && !client->GetGM() && !client->IsDiscovered(inst->GetItem()->ID))
 		{
 			client->DiscoverItem(inst->GetItem()->ID);
 		}
