@@ -5504,6 +5504,11 @@ void Client::Handle_OP_ShopPlayerBuy(const EQApplicationPacket *app)
 	if (RuleB(EventLog, RecordBuyFromMerchant))
 		LogMerchant(this, tmp, mpo->quantity, mpo->price, item, true);
 
+	if ((RuleB(Character, EnableDiscoveredItems)) && !GetGM() && !IsDiscovered(item_id))
+	{
+		DiscoverItem(item_id);
+	}
+
 	t1.stop();
 	cout << "At 1: " << t1.getDuration() << endl;
 	return;
